--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "start": "func start -p 7074"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "axios": "^0.26.0"
+  }
 }
